# GitSeed-Protocol

./: GitNut-Structure  GitNut_Full_Deployment_Guide.md  GitSeed_Full_Deployment_Guide.md  GitWhale-Structure  GitWhale_Full_Deployment_Guide.md  README.md  SECURITY.md
ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
apps/api/: README.md  package.json  tsconfig.json
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
docs/: CHANGELOG_UPDATE.md
indexer/: README.md  package.json
indexer/src/: main.ts  (+1 more)
programs/gitnut-registry/: Anchor.toml  Cargo.toml  README.md  Xargo.toml
programs/gitnut-registry/idl/: gitnut_registry.json  gitnut_registry.ts
programs/gitnut-registry/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/gitnut-registry/src/instructions/: _helpers.rs  close_project.rs  deprecate_version.rs  initialize.rs  mod.rs  publish_version.rs  register_project.rs  set_maintainers.rs  set_policy.rs  transfer_project.rs  verify_attestation.rs
programs/gitnut-registry/src/state/: maintainer.rs  mod.rs  policy.rs  project.rs  registry.rs  version.rs
programs/gitnut-registry/tests/: _helpers.ts  access-control.spec.ts  anchor.spec.ts  policy.spec.ts  registry.spec.ts  runner.ts
programs/gitnut-registry/tests/fixtures/: README.md
worker/: README.md  package.json  tsconfig.json
workflows/: api-ci.yml  ci.yml  contract-ci.yml  dependency-review.yml  docker-publish.yml  docs-deploy.yml  e2e.yml  release.yml  sbom.yml  sdk-ci.yml  security-scan.yml  web-ci.yml  worker-ci.yml
(+134 files in other folders)
