[package]
name = "gitnut-registry"
version = "0.1.0"
description = "GitNut on-chain registry (projects, versions, policy, attestations)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gitnut_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
